--- a/config/config.yaml
+++ b/config/config.yaml
@@ -134,3 +134,7 @@ platforms:
     name: "金十数据"
   - id: "fastbull"
     name: "快讯通"
+  - id: "douban"
+    name: "豆瓣"
+  - id: "coolapk"
+    name: "酷安"
